force-app/main/default/objects/BMCServiceDesk__Unavailability_Action_History__c/BMCServiceDesk__Unavailability_Action_History__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data that tracks the history of all actions that have been performed on Service Outage.</description>
    <label>Service Outage Action History</label>
    <nameField>
        <label>Service Outage Action History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Outage Action History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>