force-app/main/default/objects/BMCServiceDesk__Unavailability_Action_History__c/fields/BMCServiceDesk__FKAction__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKAction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>From the list of options, select the user-defined actions that are applicable to Service Outage. User-defined actions are used to record details of the steps taken to resolve an issue during the life cycle of an Service Outage.</inlineHelpText>
    <label>Action</label>
    <referenceTo>BMCServiceDesk__Action__c</referenceTo>
    <relationshipLabel>Service Outage Action History</relationshipLabel>
    <relationshipName>Unavailability_Action_History</relationshipName>
    <type>Lookup</type>
</CustomField>