force-app/main/default/objects/BMCServiceDesk__Unavailability_Action_History__c/fields/BMCServiceDesk__FKUser__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is automatically set to the Staff ID of the currently logged-on staff.</inlineHelpText>
    <label>Staff ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Unavailability_Action_History</relationshipName>
    <type>Lookup</type>
</CustomField>