force-app/main/default/objects/BMCServiceDesk__Unavailability_Action_History__c/fields/BMCServiceDesk__Projected_Service_Outage__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Projected_Service_Outage__c</fullName>
    <label>Service Outage</label>
    <referenceTo>BMCServiceDesk__Projected_Service_Outage__c</referenceTo>
    <relationshipLabel>Service Outage Action History</relationshipLabel>
    <relationshipName>Unavailability_Action_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>